gitops/platform/pgadmin4/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin4
  namespace: pgadmin4
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pgadmin4.__ZONE_NAME__`)
      services:
        - kind: Service
          name: pgadmin4
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin4-wiredoor
  namespace: pgadmin4
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`pgadmin4.__ZONE_NAME__`)
      services:
        - kind: Service
          name: pgadmin4
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin4-tailscale
  namespace: pgadmin4
spec:
  entryPoints:
    - webtailscale
  routes:
    - kind: Rule
      match: Host(`pgadmin4.__ZONE_NAME__`)
      services:
        - kind: Service
          name: pgadmin4
          port: 80
  tls: {}
